[package]
name = "drive-crawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
fs-err = "2.9.0"
google-drive3 = "5.0.2"
hyper-rustls = { version = "0.24.0", features = ["http2"] }
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread"] }
