[package]
name = "drive-crawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.2", features = ["derive"] }
ctrlc = "3.4.0"
fs-err = "2.9.0"
google-drive3 = "5.0.2"
hyper-rustls = { version = "0.24.0", features = ["http2"] }
log = "0.4.18"
serde = "1.0.163"
serde_json = "1.0.96"
serde_with = "3.0.0"
simplelog = "0.12.1"
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread"] }
